# steamwheel

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
app/: config.yml  main.py
app/models/: config.py
app/services/: cache.py
backend/app/: main.py
backend/app/controllers/: game.py
backend/app/db/: db.py
backend/app/models/steam/: types.py
backend/app/services/: game_service.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/app/: app.css  root.tsx
frontend/app/components/: Navbar.tsx  ThemeProvider.tsx
frontend/app/components/ui/: GameCard.tsx  button.tsx  carousel.tsx
frontend/app/home/: Home.tsx
frontend/app/routes/: home.tsx
frontend/src/: App.vue  globals.css  main.ts
tests/: load_data.test.py
