[project]
name = "steamwheel"
version = "0.1.0"
description = "Backend FastAPI for SteamWheel API. A project to get random games from Steam."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.119.0",
    "httpx>=0.28.1",
    "ijson>=3.4.0.post0",
    "pydantic>=2.12.2",
    "pyyaml>=6.0.3",
    "redis>=6.4.0",
    "requests>=2.32.5",
]
